# craftops

./: .cursorrules  .gitignore  .golangci.yml  DEPLOYMENT_GUIDE.md  DEVELOPMENT.md  Dockerfile  LICENSE  MANIFEST.in  Makefile  MinecraftModManager.py  PROJECT_SUMMARY.md  README.md  TODO.md  USAGE_GUIDE.md  build.sh  build_exe.sh  conf.toml  config.json.example  executable-build.sh  go.mod  go.sum  install.sh  minecraft-mod-manager.spec  package-build.sh  pyproject.toml  pyrightconfig.json  requirements-dev.txt  requirements.txt  setup.py
.github/: .golangci.yml  PULL_REQUEST_TEMPLATE.md  dependabot.yml  kodiak.toml  renovate.json
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: auto-merge-dependabot.yml  auto-merge.yml  benchmarks.yml  ci.yml  compliance.yml  go-analysis.yml  main.yml  maintenance.yml  release.yml  security.yml  stale.yml  test.yml
.kiro/steering/: product.md  structure.md  tech.md
cmd/craftops/: main.go  main_test.go
docs/: DEPLOYMENT_GUIDE.md  PROJECT_STRUCTURE.md  deployment.md  usage.md
internal/app/: app.go
internal/cli/: app.go  backup.go  cli_test.go  commands.go  commands_backup.go  commands_health.go  commands_init.go  commands_mods.go  commands_server.go  factory.go  health.go  helpers.go  init.go  interfaces.go  mods.go  root.go  server.go  update_mods_cmd.go
internal/config/: config.go  config_pkg_test.go  config_test.go  validator.go
internal/domain/: domain.go  domain_test.go  types.go  types_test.go
internal/logger/: logger.go
internal/service/: backup.go  backup_test.go  export_test.go  helpers_test.go  interfaces.go  mods.go  mods_test.go  notification.go  notification_test.go  server.go  server_test.go  service_test.go
internal/services/: backup_service.go  base.go  interfaces.go  mod_service.go  notification_service.go  server_service.go  services_pkg_test.go
internal/ui/: terminal.go  terminal_test.go
internal/util/: health.go  http.go  logger.go  retry.go
internal/view/: view.go
minecraft_mod_manager/: __init__.py  __main__.py  app.py  minecraft_mod_manager.py  services.py
minecraft_mod_manager/config/: config.jsonc.example  config.py  config.toml
minecraft_mod_manager/controllers/: server.py
minecraft_mod_manager/managers/: __init__.py  backup.py  mod.py  notification.py
minecraft_mod_manager/settings/: config.py
minecraft_mod_manager/utils/: constants.py  jsonc.py  toml_utils.py
scripts/: development-setup.sh  release.sh
tests/: __init__.py  conftest.py  test_basic.py
tests/cli/: backup_test.go  cli_e2e_test.go  factory_test.go  health_test.go  mods_test.go  server_test.go
tests/config/: config_test.go
tests/mocks/: backup_service_mock.go  mod_service_mock.go  notification_service_mock.go  server_service_mock.go  service_factory_mock.go
tests/services/: backup_service_test.go  mod_service_test.go  notification_service_test.go  server_service_test.go
tests/view/: view_test.go
