[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "minecraft-mod-manager"
version = "1.0.0"
authors = [
    { name="dacrab", email="dacrab@users.noreply.github.com" },
]
description = "A tool to manage Minecraft mods across multiple servers"
readme = "README.md"
requires-python = ">=3.9"
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Environment :: Console",
    "Topic :: Games/Entertainment",
    "Topic :: System :: Software Distribution",
    "Topic :: Utilities",
]
dependencies = [
    "aiohttp>=3.9.1",
    "requests>=2.31.0",
    "tqdm>=4.66.1",
]

[project.urls]
"Homepage" = "https://github.com/dacrab/minecraft-mod-manager"
"Bug Tracker" = "https://github.com/dacrab/minecraft-mod-manager/issues"

[project.scripts]
minecraft-mod-manager = "minecraft_mod_manager.__main__:main"

[tool.setuptools]
packages = ["minecraft_mod_manager"]

[tool.setuptools.package-data]
minecraft_mod_manager = ["config/config.jsonc"] 