[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "minecraft-mod-manager"
version = "1.0.0"
authors = [
    { name="dacrab", email="dacrab@users.noreply.github.com" },
]
description = "A tool to manage Minecraft mods across multiple servers"
readme = "README.md"
requires-python = ">=3.9"
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Environment :: Console",
    "Topic :: Games/Entertainment",
    "Topic :: System :: Software Distribution",
    "Topic :: Utilities",
]
dependencies = [
    "aiohttp>=3.9.1",
    "requests>=2.31.0",
    "tqdm>=4.66.1",
]

[project.urls]
"Homepage" = "https://github.com/dacrab/minecraft-mod-manager"
"Bug Tracker" = "https://github.com/dacrab/minecraft-mod-manager/issues"

[project.scripts]
minecraft-mod-manager = "minecraft_mod_manager.__main__:main"

[tool.setuptools]
packages = ["minecraft_mod_manager"]

[tool.setuptools.package-data]
minecraft_mod_manager = ["config/*.jsonc", "config/config.jsonc"]

[project.optional-dependencies]
test = [
    "pytest>=7.4.0",
    "pytest-cov>=4.1.0",
    "mypy>=1.7.0",
    "ruff>=0.1.0",
]

[tool.mypy]
python_version = "3.9"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
check_untyped_defs = true

[tool.ruff]
line-length = 100
select = ["E", "F", "B", "I"]
ignore = []

[tool.ruff.lint.isort]
known-first-party = ["minecraft_mod_manager"]
combine-as-imports = true

[tool.pytest.ini_options]
minversion = "6.0"
addopts = "-ra -q --cov=minecraft_mod_manager"
testpaths = ["tests"] 